@@ -4,42 +4,22 @@
 
 CDSS HydroBase Database Java Library
 CDSS HydroBase Database Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 2018-2019 Colorado Department of Natural Resources
+Copyright (C) 2018-2025 Colorado Department of Natural Resources
 
 CDSS HydroBase Database Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
+CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS HydroBase Database Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// HydroBase_TableModel_Calls - Table Model for a Vector of 
-//	HydroBase_Calls objects.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-// 2003-03-28	J. Thomas Sapienza, RTi	Initial version.
-// 2003-03-31	JTS, RTi		Fixed error in formatting DateTime 
-//					values.
-// 2003-05-13	JTS, RTi		Row numbers (the 0th column) now are
-//					not affected by column sorting.
-// 2004-01-18	JTS, RTi		Apro date is now returned as a String.
-// 2004-01-20	JTS, RTi		Removed 0th column in order to use the 
-//					new JWorksheet row header system.
-// 2005-04-06	JTS, RTi		Adjusted column names and sizes.
-// 2005-04-29	JTS, RTi		Added finalize().
-// 2005-06-28	JTS, RTi		Removed the unused DMI parameter.
-// ----------------------------------------------------------------------------
 
 package DWR.DMI.HydroBaseDMI;
 
@@ -229,7 +209,7 @@ public Object getValueAt(int row, int col) {
 		case COL_APRO:		return (new DateTime(
 						c.getApro_date())).toString(
 						DateTime.FORMAT_YYYY_MM_DD);
-		case COL_ADMIN_NO:	return new Double(c.getAdminno());
+		case COL_ADMIN_NO:	return Double.valueOf(c.getAdminno());
 		case COL_DCR_AMT:	return c.getDcr_amt();
 		case COL_DISTRICTS:	return c.getDistricts_affected();
 		case COL_SET:		return c.getSet_comments();
