@@ -4,42 +4,29 @@
 
 CDSS HydroBase Database Java Library
 CDSS HydroBase Database Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 2018-2019 Colorado Department of Natural Resources
+Copyright (C) 2018-2025 Colorado Department of Natural Resources
 
 CDSS HydroBase Database Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
+CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS HydroBase Database Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// HydroBase_TableModel_StationView - Table Model for a Vector of 
-//	HydroBase_StationView objects.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-// 2005-02-09	J. Thomas Sapienza, RTi	Initial version.
-// 2005-07-06	Steven A. Malers, RTi	Add tool tips.  Review headers.
-// 2005-11-15	JTS, RTi		Added div column.
-// ----------------------------------------------------------------------------
 
 package DWR.DMI.HydroBaseDMI;
 
 import java.util.List;
 
 /**
-This class is a table model for displaying station data in the 
-HydroBase_GUI_Station GUI.
+This class is a table model for displaying station data in the HydroBase_GUI_Station GUI.
 */
 @SuppressWarnings("serial")
 public class HydroBase_TableModel_StationView 
@@ -303,8 +290,8 @@ public Object getValueAt(int row, int col) {
 
 	HydroBase_StationView s = _data.get(row);
 	switch (col) {
-		case COL_DIV:		return new Integer(s.getDiv());
-		case COL_WD:		return new Integer(s.getWD());
+		case COL_DIV:		return Integer.valueOf(s.getDiv());
+		case COL_WD:		return Integer.valueOf(s.getWD());
 		case COL_ID:		return s.getStation_id();
 		case COL_ABBREV:	return s.getAbbrev();
 		case COL_NAME:		return s.getStation_name();
@@ -327,18 +314,18 @@ public Object getValueAt(int row, int col) {
 						return __timeStep;
 					}
 					return s.getTime_step();
-		case COL_START:		return new Integer(s.getStart_year());
-		case COL_END:		return new Integer(s.getEnd_year());
+		case COL_START:		return Integer.valueOf(s.getStart_year());
+		case COL_END:		return Integer.valueOf(s.getEnd_year());
 		case COL_COUNTY:	return __dmi.lookupCountyName(s.getCty());
 		case COL_STATE:		return s.getST();
 		case COL_HUC:		return s.getHUC();
-		case COL_ELEVATION:	return new Double(s.getElev());
-		case COL_UTMX:		return new Double(s.getUtm_x());
-		case COL_UTMY:		return new Double(s.getUtm_y());
-		case COL_LONGITUDE:	return new Double(s.getLongdecdeg());
-		case COL_LATITUDE:	return new Double(s.getLatdecdeg());
-		case COL_DRAIN:		return new Double(s.getDrain_area());
-		case COL_CONTR:		return new Double(s.getContr_area());
+		case COL_ELEVATION:	return Double.valueOf(s.getElev());
+		case COL_UTMX:		return Double.valueOf(s.getUtm_x());
+		case COL_UTMY:		return Double.valueOf(s.getUtm_y());
+		case COL_LONGITUDE:	return Double.valueOf(s.getLongdecdeg());
+		case COL_LATITUDE:	return Double.valueOf(s.getLatdecdeg());
+		case COL_DRAIN:		return Double.valueOf(s.getDrain_area());
+		case COL_CONTR:		return Double.valueOf(s.getContr_area());
 		default:		return "";
 	}
 }
