@@ -4,19 +4,19 @@
 
 CDSS HydroBase Database Java Library
 CDSS HydroBase Database Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 2018-2019 Colorado Department of Natural Resources
+Copyright (C) 2018-2025 Colorado Department of Natural Resources
 
 CDSS HydroBase Database Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
+CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS HydroBase Database Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -163,9 +163,9 @@ public Object getValueAt(int row, int col) {
 		case COL_WF_IDENTIFIER:
 			return wf.getIdentifier();
 		case COL_WF_WIS_NUM:
-			return new Integer(wf.getWis_num());
+			return Integer.valueOf(wf.getWis_num());
 		case COL_WF_ROW_NUM:
-			return new Integer(wf.getWis_row());
+			return Integer.valueOf(wf.getWis_row());
 	}
 	return null;
 }
